--- a/app/src/main/res/menu/menu_my.xml
+++ b/app/src/main/res/menu/menu_my.xml
@@ -2,9 +2,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.space.cc.myfirstapp.MyActivity">
-    <item
+   <!-- <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />-->
+
+    <item
+        android:id="@+id/action_edit"
+        android:icon="@drawable/edit"
+        android:orderInCategory="80"
+        android:title="@string/action_edit"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/share"
+        android:orderInCategory="90"
+        android:title="@string/action_share"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_overflow"
+        android:orderInCategory="100"
+        android:title="@string/action_more"
+        android:icon="@drawable/more_love"
+        app:showAsAction="always" />
+
+
 </menu>
