--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -28,5 +28,11 @@
         android:text="@string/hello_world"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 </LinearLayout>
