--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     android:id="@+id/msgcontent"
     android:background="@drawable/activity_background"
-    tools:context=".DisplayMessageActivity">
+    tools:context=".DisplayMessageActivity"
+    android:orientation="vertical">
+
+
+
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,4 +19,21 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
+
+    <TextView
+        android:id="@+id/textDisplay"
+        android:textSize="40sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
+
 </LinearLayout>
